--- a/P1_Filter and Merge.Rmd
+++ b/P1_Filter and Merge.Rmd
@@ -431,16 +431,16 @@ p <- ggplot(performance_plot_data, aes(x = Year, y = avg_percentage_change, colo
                             '10000' = '10000m', 
                             '42195' = 'Marathon'))) +
   scale_color_manual(values = distance_colors) +
-  labs(title = "Average Male Performance Improvement Over Time by Distance",
+  labs(title = "Male Performance Has Improved for All Distances",
        x = "Year", y = "Average Percentage Improvement") +
   scale_y_continuous(labels = label_number(suffix = "%"), limits = common_scale) +  # Format Y-axis labels as percentages and set common Y-axis scale
   theme_minimal() +
   # Modify theme elements
-  theme(axis.text.x = element_text(angle = 0, hjust = 1, size = 7),
-        axis.text.y = element_text(size = 7),
-        strip.text.x = element_text(size = 8),
-        axis.title.x = element_text(size = 8),
-        axis.title.y = element_text(size = 8),
+  theme(axis.text.x = element_text(angle = 0, hjust = 1, size = 10),
+        axis.text.y = element_text(size = 10),
+        strip.text.x = element_text(size = 12),
+        axis.title.x = element_text(size = 12),
+        axis.title.y = element_text(size = 12),
         legend.position = "none") +
   
   # Customize the background of the facet labels
